--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "~13.3.0",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
@@ -30,11 +31,16 @@
     "angular-bootstrap-datetimepicker": "^4.0.2",
     "angularjs-bootstrap-datetimepicker": "^1.1.4",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.8.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.2",
     "ngx-cookie-service": "^13.1.2",
     "ngx-material-timepicker": "^5.5.3",
     "ngx-pagination": "^5.1.1",
+    "ngx-print": "^1.2.1",
     "open-iconic": "^1.1.1",
+    "pdfmake": "^0.2.5",
     "rxjs": "~7.5.0",
     "save": "^2.4.0",
     "sweetalert2": "^11.4.8",
@@ -47,6 +53,7 @@
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/pdfmake": "^0.1.21",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
